--- a/index.html
+++ b/index.html
@@ -77,10 +77,42 @@
       <section class="here">
         <div class="container cap-container">
           <h1 class="here-title">Effective Solutions for Your Business</h1>
-          <button type="button" class="here-btn">Order Service</button>
+          <button type="button" class="here-btn" data-modal-open>Order Service</button>
         </div>
       </section>
-      <!--SECTION 2 Feature-->
+      <!--SECTION 2-->
+      <section>
+        <ul class="icon-list">
+          <li>
+            <div class="icon-container">
+              <svg width="64" height="64">
+                <use href="./images/icons.svg.svg#icon-antenna"></use>
+              </svg>
+            </div>
+          </li>
+          <li>
+            <div class="icon-container">
+              <svg width="64" height="64">
+                <use href="./images/icons.svg.svg#icon-clock"></use>
+              </svg>
+            </div>
+          </li>
+          <li>
+            <div class="icon-container">
+              <svg width="64" height="64">
+                <use href="./images/icons.svg.svg#icon-diagram"></use>
+              </svg>
+            </div>
+          </li>
+          <li>
+            <div class="icon-container">
+              <svg width="64" height="64">
+                <use href="./images/icons.svg.svg#icon-astronaut"></use>
+              </svg>
+            </div>
+          </li>
+      </section>
+      <!--SECTION 3 Feature-->
       <section class="features">
         <div class="container features-container">
           <h2 class="featurest visually-hidden">Features</h2>
@@ -143,6 +175,38 @@
               <div class="employee-info">
                 <h3 class="made-name">Mark Guerrero</h3>
                 <p class="made-text">Product Designer</p>
+                <div class="social-media">
+                  <ul class="social-media-list">
+                    <li class="social-media-item">
+                      <a href="." class="social-media-link">
+                        <svg class="social-media-icon" width="16" height="16">
+                          <use href="./images/icons.svg.svg#icon-Instagram"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="social-media-item">
+                      <a href="#" class="social-media-link">
+                        <svg class="social-media-icon" width="16" height="16">
+                          <use href="./images/icons.svg.svg#icon-Twitter"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="social-media-item">
+                      <a href="#" class="social-media-link">
+                        <svg class="social-media-icon" width="16" height="16">
+                          <use href="./images/icons.svg.svg#icon-Facebook"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="social-media-item">
+                      <a href="#" class="social-media-link">
+                        <svg class="social-media-icon" width="16" height="16">
+                          <use href="./images/icons.svg.svg#icon-In"></use>
+                        </svg>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </li>
             <li class="made-idem">
@@ -150,6 +214,38 @@
               <div class="employee-info">
                 <h3 class="made-name">Tom Ford</h3>
                 <p class="made-text">Frontend Developer</p>
+                <div class="social-media">
+                  <ul class="social-media-list">
+                    <li class="social-media-item">
+                      <a href="." class="social-media-link">
+                        <svg class="social-media-icon" width="16" height="16">
+                          <use href="./images/icons.svg.svg#icon-Instagram"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="social-media-item">
+                      <a href="#" class="social-media-link">
+                        <svg class="social-media-icon" width="16" height="16">
+                          <use href="./images/icons.svg.svg#icon-Twitter"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="social-media-item">
+                      <a href="#" class="social-media-link">
+                        <svg class="social-media-icon" width="16" height="16">
+                          <use href="./images/icons.svg.svg#icon-Facebook"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="social-media-item">
+                      <a href="#" class="social-media-link">
+                        <svg class="social-media-icon" width="16" height="16">
+                          <use href="./images/icons.svg.svg#icon-In"></use>
+                        </svg>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </li>
             <li class="made-idem">
@@ -157,6 +253,38 @@
               <div class="employee-info">
                 <h3 class="made-name">Camila Garcia</h3>
                 <p class="made-text">Marketing</p>
+                <div class="social-media">
+                  <ul class="social-media-list">
+                    <li class="social-media-item">
+                      <a href="." class="social-media-link">
+                        <svg class="social-media-icon" width="16" height="16">
+                          <use href="./images/icons.svg.svg#icon-Instagram"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="social-media-item">
+                      <a href="#" class="social-media-link">
+                        <svg class="social-media-icon" width="16" height="16">
+                          <use href="./images/icons.svg.svg#icon-Twitter"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="social-media-item">
+                      <a href="#" class="social-media-link">
+                        <svg class="social-media-icon" width="16" height="16">
+                          <use href="./images/icons.svg.svg#icon-Facebook"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="social-media-item">
+                      <a href="#" class="social-media-link">
+                        <svg class="social-media-icon" width="16" height="16">
+                          <use href="./images/icons.svg.svg#icon-In"></use>
+                        </svg>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </li>
             <li class="made-idem">
@@ -164,11 +292,93 @@
               <div class="employee-info">
                 <h3 class="made-name">Daniel Wilson</h3>
                 <p class="made-text">UI Designer</p>
+                <div class="social-media">
+                  <ul class="social-media-list">
+                    <li class="social-media-item">
+                      <a href="." class="social-media-link">
+                        <svg class="social-media-icon" width="16" height="16">
+                          <use href="./images/icons.svg.svg#icon-Instagram"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="social-media-item">
+                      <a href="#" class="social-media-link">
+                        <svg class="social-media-icon" width="16" height="16">
+                          <use href="./images/icons.svg.svg#icon-Twitter"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="social-media-item">
+                      <a href="#" class="social-media-link">
+                        <svg class="social-media-icon" width="16" height="16">
+                          <use href="./images/icons.svg.svg#icon-Facebook"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="social-media-item">
+                      <a href="#" class="social-media-link">
+                        <svg class="social-media-icon" width="16" height="16">
+                          <use href="./images/icons.svg.svg#icon-In"></use>
+                        </svg>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </li>
           </ul>
         </div>
       </section>
+      <!--SECTION 5-->
+      <section class="customers-section">
+        <div class="container">
+          <h2 class="customers-title">Customers</h2>
+          <ul class="customers-list">
+            <li class="customer-item">
+              <a href="#" class="customer-link">
+                <svg class="customer-icon" width="104" height="56">
+                  <use href="./images/icons.svg.svg#icon-Client1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customer-item">
+              <a href="#" class="customer-link">
+                <svg class="customer-icon" width="104" height="56">
+                  <use href="./images/icons.svg.svg#icon-Client2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customer-item">
+              <a href="#" class="customer-link">
+                <svg class="customer-icon" width="104" height="56">
+                  <use href="./images/icons.svg.svg#icon-Client3"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customer-item">
+              <a href="#" class="customer-link">
+                <svg class="customer-icon" width="104" height="56">
+                  <use href="./images/icons.svg.svg#icon-Client4"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customer-item">
+              <a href="#" class="customer-link">
+                <svg class="customer-icon" width="104" height="56">
+                  <use href="./images/icons.svg.svg#icon-Client5"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customer-item">
+              <a href="#" class="customer-link">
+                <svg class="customer-icon" width="104" height="56">
+                  <use href="./images/icons.svg.svg#icon-Client6"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </section>>
     </main>
     <!--footer-->
     <footer class="footer">
@@ -176,6 +386,49 @@
         <a href="./index.html" class="footer-logo-link link">Web<span class="footer-logo-part">Studio</span></a>
         <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
       </div>
+      <div class="social-media-container">
+        <p class="social-media-title">Social media</p>
+        <ul class="social-media-list">
+          <li class="social-media-item">
+            <a href="#" class="social-media-link">
+              <svg class="social-media-icon" width="24" height="24">
+                <use href="./images/icons.svg.svg#icon-Instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-media-item">
+            <a href="#" class="social-media-link">
+              <svg class="social-media-icon" width="24" height="24">
+                <use href="./images/icons.svg.svg#icon-Twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-media-item">
+            <a href="#" class="social-media-link">
+              <svg class="social-media-icon" width="24" height="24">
+                <use href="./images/icons.svg.svg#icon-Facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-media-item">
+            <a href="#" class="social-media-link">
+              <svg class="social-media-icon" width="24" height="24">
+                <use href="./images/icons.svg.svg#icon-In"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
     </footer>
+    <div class="modal-container" data-modal>
+      <div class="modal">
+        <button class="modal-close-btn" data-modal-close>
+          <svg class="modal-close-icon" width="8" height="8">
+            <use href="./images/Moder.svg#icon-Modal"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
