--- a/index.html
+++ b/index.html
@@ -84,28 +84,28 @@
       <section>
         <ul class="icon-list">
           <li>
-            <div class="icon-container">
+            <div class="icon-container-svg">
               <svg width="64" height="64">
                 <use href="./images/icons.svg.svg#icon-antenna"></use>
               </svg>
             </div>
           </li>
           <li>
-            <div class="icon-container">
+            <div class="icon-container-svg">
               <svg width="64" height="64">
                 <use href="./images/icons.svg.svg#icon-clock"></use>
               </svg>
             </div>
           </li>
           <li>
-            <div class="icon-container">
+            <div class="icon-container-svg">
               <svg width="64" height="64">
                 <use href="./images/icons.svg.svg#icon-diagram"></use>
               </svg>
             </div>
           </li>
           <li>
-            <div class="icon-container">
+            <div class="icon-container-svg">
               <svg width="64" height="64">
                 <use href="./images/icons.svg.svg#icon-astronaut"></use>
               </svg>
@@ -113,7 +113,6 @@
           </li>
         </ul>
       </section>
-      <!--SECTION 3 Feature-->
       <section class="features">
         <div class="container features-container">
           <h2 class="featurest visually-hidden">Features</h2>
@@ -171,15 +170,15 @@
         <div class="container">
           <h2 class="made-title">Our Team</h2>
           <ul class="made-list list">
-            <li class="made-idem">
-              <img src="./images/img(4).jpg" alt="photo" width="264" />
+            <li class="made-item">
               <div class="employee-info">
+                <img src="./images/img(4).jpg" alt="photo" width="264" />
                 <h3 class="made-name">Mark Guerrero</h3>
                 <p class="made-text">Product Designer</p>
                 <div class="social-media">
                   <ul class="social-media-list">
                     <li class="social-media-item">
-                      <a href="." class="social-media-link">
+                      <a href="#" class="social-media-link">
                         <svg class="social-media-icon" width="16" height="16">
                           <use href="./images/icons.svg.svg#icon-Instagram"></use>
                         </svg>
