--- a/index.html
+++ b/index.html
@@ -420,9 +420,9 @@
         </ul>
       </div>
     </footer>
-    <div class="modal-container" data-modal>
+    <div class="modal-container is-hidden" data-modal>
       <div class="modal">
-        <button class="modal-close-btn" data-modal-close>
+        <button class="modal-close-btn" type="button" data-modal-close>
           <svg class="modal-close-icon" width="8" height="8">
             <use href="./images/Moder.svg#icon-Modal"></use>
           </svg>
