--- a/index.html
+++ b/index.html
@@ -81,43 +81,16 @@
         </div>
       </section>
       <!--SECTION 2-->
-      <section>
-        <ul class="icon-list">
-          <li>
-            <div class="icon-container-svg">
-              <svg width="64" height="64">
-                <use href="./images/icons.svg.svg#icon-antenna"></use>
-              </svg>
-            </div>
-          </li>
-          <li>
-            <div class="icon-container-svg">
-              <svg width="64" height="64">
-                <use href="./images/icons.svg.svg#icon-clock"></use>
-              </svg>
-            </div>
-          </li>
-          <li>
-            <div class="icon-container-svg">
-              <svg width="64" height="64">
-                <use href="./images/icons.svg.svg#icon-diagram"></use>
-              </svg>
-            </div>
-          </li>
-          <li>
-            <div class="icon-container-svg">
-              <svg width="64" height="64">
-                <use href="./images/icons.svg.svg#icon-astronaut"></use>
-              </svg>
-            </div>
-          </li>
-        </ul>
-      </section>
       <section class="features">
         <div class="container features-container">
           <h2 class="featurest visually-hidden">Features</h2>
           <ul class="features-list list">
             <li class="features-item">
+              <div class="icon-container-svg">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="features-subtitle">Strategy</h3>
               <p class="features-item-text">
                 Our goal is to identify the business problem to walk away with
@@ -125,6 +98,11 @@
               </p>
             </li>
             <li class="features-item">
+              <div class="icon-container-svg">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="features-subtitle">Punctuality</h3>
               <p class="features-item-text">
                 Bring the key message to the brand's audience for the best price
@@ -132,6 +110,11 @@
               </p>
             </li>
             <li class="features-item">
+              <div class="icon-container-svg">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="features-subtitle">Diligence</h3>
               <p class="features-item-text">
                 Research and confirm brands that present the strongest digital
@@ -139,6 +122,11 @@
               </p>
             </li>
             <li class="features-item">
+              <div class="icon-container-svg">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="features-subtitle">Technologies</h3>
               <p class="features-item-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -420,6 +408,7 @@
         </ul>
       </div>
     </footer>
+    <!--Modeln-->
     <div class="modal-container is-hidden" data-modal>
       <div class="modal">
         <button class="modal-close-btn" type="button" data-modal-close>
