--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
   <body>
     <header class="header-menu">
       <div class="container header-container">
-
         <nav class="header-navigation">
           <a href="./index.html" class="header-logo-link link">
             Web<span class="footer-logo-part">Studio</span>
@@ -31,11 +30,7 @@
 
           <ul class="list">
             <li class="header-link-item">
-              <a
-                href="./index.html"
-                class="link-menu link"
-                aria-label="Studio"
-                
+              <a href="./index.html" class="link-menu link" aria-label="Studio"
                 >Studio</a
               >
             </li>
@@ -45,7 +40,6 @@
                 href="./portfolio.html"
                 class="link-menu link"
                 aria-label="Studio"
-                
                 >Portfolio</a
               >
             </li>
@@ -77,7 +71,9 @@
       <section class="here">
         <div class="container cap-container">
           <h1 class="here-title">Effective Solutions for Your Business</h1>
-          <button type="button" class="here-btn" data-modal-open>Order Service</button>
+          <button type="button" class="here-btn" data-modal-open>
+            Order Service
+          </button>
         </div>
       </section>
       <!--SECTION 2-->
@@ -159,41 +155,40 @@
           <h2 class="made-title">Our Team</h2>
           <ul class="made-list list">
             <li class="made-item">
-                <img src="./images/img(4).jpg" alt="photo" width="264" />
-                <div class="employee-info">
+              <img src="./images/img(4).jpg" alt="photo" width="264" />
+              <div class="employee-info">
                 <h3 class="made-name">Mark Guerrero</h3>
                 <p class="made-text">Product Designer</p>
-                  <ul class="social-media-list">
-                    <li class="social-media-item">
-                      <a href="#" class="social-media-link">
-                        <svg class="social-media-icon" width="16" height="16">
-                          <use href="./images/icons.svg.svg#icon-Instagram"></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="social-media-item">
-                      <a href="#" class="social-media-link">
-                        <svg class="social-media-icon" width="16" height="16">
-                          <use href="./images/icons.svg.svg#icon-Twitter"></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="social-media-item">
-                      <a href="#" class="social-media-link">
-                        <svg class="social-media-icon" width="16" height="16">
-                          <use href="./images/icons.svg.svg#icon-Facebook"></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="social-media-item">
-                      <a href="#" class="social-media-link">
-                        <svg class="social-media-icon" width="16" height="16">
-                          <use href="./images/icons.svg.svg#icon-In"></use>
-                        </svg>
-                      </a>
-                    </li>
-                  </ul>
-                </div>
+                <ul class="social-media-list">
+                  <li class="social-media-item">
+                    <a href="#" class="social-media-link">
+                      <svg class="social-media-icon" width="16" height="16">
+                        <use href="./images/icons.svg.svg#icon-Instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-item">
+                    <a href="#" class="social-media-link">
+                      <svg class="social-media-icon" width="16" height="16">
+                        <use href="./images/icons.svg.svg#icon-Twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-item">
+                    <a href="#" class="social-media-link">
+                      <svg class="social-media-icon" width="16" height="16">
+                        <use href="./images/icons.svg.svg#icon-Facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-item">
+                    <a href="#" class="social-media-link">
+                      <svg class="social-media-icon" width="16" height="16">
+                        <use href="./images/icons.svg.svg#icon-In"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="made-idem">
@@ -231,7 +226,6 @@
                       </a>
                     </li>
                   </ul>
-                </div>
               </div>
             </li>
             <li class="made-idem">
@@ -269,7 +263,6 @@
                       </a>
                     </li>
                   </ul>
-                </div>
               </div>
             </li>
             <li class="made-idem">
@@ -362,13 +355,18 @@
             </li>
           </ul>
         </div>
-      </section>>
+      </section>
     </main>
     <!--footer-->
     <footer class="footer">
       <div class="container">
-        <a href="./index.html" class="footer-logo-link link">Web<span class="footer-logo-part">Studio</span></a>
-        <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        <a href="./index.html" class="footer-logo-link link"
+          >Web<span class="footer-logo-part">Studio</span></a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
       </div>
       <div class="social-media-container">
         <p class="social-media-title">Social media</p>
