--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                 </ul>
               </div>
             </li>
-            <li class="made-idem">
+            <li class="made-item">
               <img src="./images/img(5).jpg" alt="photo" width="264" />
               <div class="employee-info">
                 <h3 class="made-name">Tom Ford</h3>
@@ -228,7 +228,7 @@
                   </ul>
               </div>
             </li>
-            <li class="made-idem">
+            <li class="made-item">
               <img src="./images/img(6).jpg" alt="photo" width="264" />
               <div class="employee-info">
                 <h3 class="made-name">Camila Garcia</h3>
@@ -265,7 +265,7 @@
                   </ul>
               </div>
             </li>
-            <li class="made-idem">
+            <li class="made-item">
               <img src="./images/img(7).jpg" alt="photo" width="264" />
               <div class="employee-info">
                 <h3 class="made-name">Daniel Wilson</h3>
