--- a/index.html
+++ b/index.html
@@ -359,7 +359,8 @@
     </main>
     <!--footer-->
     <footer class="footer">
-      <div class="container">
+      <div class="footer-container">
+      <div class="footer-logo-text">
         <a href="./index.html" class="footer-logo-link link"
           >Web<span class="footer-logo-part">Studio</span></a
         >
@@ -368,38 +369,39 @@
           digital marketing & growth solutions.
         </p>
       </div>
-      <div class="social-media-container">
-        <p class="social-media-title">Social media</p>
-        <ul class="social-media-list">
-          <li class="social-media-item">
-            <a href="#" class="social-media-link">
-              <svg class="social-media-icon" width="24" height="24">
-                <use href="./images/icons.svg.svg#icon-Instagram"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="social-media-item">
-            <a href="#" class="social-media-link">
-              <svg class="social-media-icon" width="24" height="24">
-                <use href="./images/icons.svg.svg#icon-Twitter"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="social-media-item">
-            <a href="#" class="social-media-link">
-              <svg class="social-media-icon" width="24" height="24">
-                <use href="./images/icons.svg.svg#icon-Facebook"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="social-media-item">
-            <a href="#" class="social-media-link">
-              <svg class="social-media-icon" width="24" height="24">
-                <use href="./images/icons.svg.svg#icon-In"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
+        <div class="social-media-container">
+          <p class="social-media-title">Social media</p>
+          <ul class="social-media-footer">
+            <li class="social-media-item">
+              <a href="#" class="social-media-link">
+                <svg class="social-media-icon" width="24" height="24">
+                  <use href="./images/icons.svg.svg#icon-Instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-media-item">
+              <a href="#" class="social-media-link">
+                <svg class="social-media-icon" width="24" height="24">
+                  <use href="./images/icons.svg.svg#icon-Twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-media-item">
+              <a href="#" class="social-media-link">
+                <svg class="social-media-icon" width="24" height="24">
+                  <use href="./images/icons.svg.svg#icon-Facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-media-item">
+              <a href="#" class="social-media-link">
+                <svg class="social-media-icon" width="24" height="24">
+                  <use href="./images/icons.svg.svg#icon-In"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
     <!--Modeln-->
