--- a/portfolio.html
+++ b/portfolio.html
@@ -188,17 +188,52 @@
         </div>
       </section>
     </main>
-
-    <footer class="footer">
-      <div class="container">
-        <a href="./index.html" class="footer-logo-link link"
-          >Web<span class="footer-logo-part">Studio</span></a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
-      </div>
-    </footer>
+<!--FOOTER-->
+<footer class="footer">
+  <div class="footer-container">
+  <div class="footer-logo-text">
+    <a href="./index.html" class="footer-logo-link link"
+      >Web<span class="footer-logo-part">Studio</span></a
+    >
+    <p class="footer-text">
+      Increase the flow of customers and sales for your business with
+      digital marketing & growth solutions.
+    </p>
+  </div>
+    <div class="social-media-container">
+      <p class="social-media-title">Social media</p>
+      <ul class="social-media-footer">
+        <li class="social-media-item">
+          <a href="#" class="social-media-link">
+            <svg class="social-media-icon" width="24" height="24">
+              <use href="./images/icons.svg.svg#icon-Instagram"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="social-media-item">
+          <a href="#" class="social-media-link">
+            <svg class="social-media-icon" width="24" height="24">
+              <use href="./images/icons.svg.svg#icon-Twitter"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="social-media-item">
+          <a href="#" class="social-media-link">
+            <svg class="social-media-icon" width="24" height="24">
+              <use href="./images/icons.svg.svg#icon-Facebook"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="social-media-item">
+          <a href="#" class="social-media-link">
+            <svg class="social-media-icon" width="24" height="24">
+              <use href="./images/icons.svg.svg#icon-In"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</footer>
   </body>
 </html>
