--- a/portfolio.html
+++ b/portfolio.html
@@ -101,7 +101,10 @@
           <ul class="list-cards">
             <li class="name-item-list">
               <a class="link" href="/">
-                <img src="./images/img8.jpg" alt="banking" width="360" />
+                <div class="container-cards-photo">
+                  <p class="cards-photo-text"> 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                  <img src="./images/img8.jpg" alt="banking" width="360" />
+                </div>
                 <div class="cards-container">
                   <h2 class="name-photo">Banking App Interface Concept</h2>
                   <p class="name-text-item">App</p>
@@ -110,7 +113,10 @@
             </li>
             <li class="name-item-list">
               <a class="link" href="/">
+                <div class="container-cards-photo">
+                  <p class="cards-photo-text"> 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                 <img src="./images/img9.jpg" alt="cashless" width="360" />
+                </div>
                 <div class="cards-container">
                   <h2 class="name-photo">Cashless Payment</h2>
                   <p class="name-text-item">Marketing</p>
@@ -119,7 +125,10 @@
             </li>
             <li class="name-item-list">
               <a class="link" href="/">
+                <div class="container-cards-photo">
+                  <p class="cards-photo-text"> 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                 <img src="./images/img10.jpg" alt="meditation" width="360" />
+                </div>
                 <div class="cards-container">
                   <h2 class="name-photo">Meditation App</h2>
                   <p class="name-text-item">App</p>
@@ -128,7 +137,10 @@
             </li>
             <li class="name-item-list">
               <a class="link" href="/">
+                <div class="container-cards-photo">
+                  <p class="cards-photo-text"> 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                 <img src="./images/img11.jpg" alt="marketing" width="360" />
+                </div>
                 <div class="cards-container">
                   <h2 class="name-photo">Taxi Service</h2>
                   <p class="name-text-item">Marketing</p>
@@ -137,47 +149,58 @@
             </li>
             <li class="name-item-list">
               <a class="link" href="/">
+                <div class="container-cards-photo">
+                  <p class="cards-photo-text"> 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                 <img src="./images/img12.jpg" alt="design" width="360" />
+                </div>
                 <div class="cards-container">
                   <h2 class="name-photo">Screen Illustrations</h2>
                   <p class="name-text-item">Design</p>
                 </div>
               </a>
             </li>
-
             <li class="name-item-list">
               <a class="link" href="/">
+                <div class="container-cards-photo">
+                  <p class="cards-photo-text"> 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                 <img src="./images/img13.jpg" alt="marketing" width="360" />
+                </div>
                 <div class="cards-container">
                   <h2 class="name-photo">Online Courses</h2>
                   <p class="name-text-item">Marketing</p>
                 </div>
               </a>
             </li>
-
             <li class="name-item-list">
               <a class="link" href="/">
+                <div class="container-cards-photo">
+                  <p class="cards-photo-text"> 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                 <img src="./images/img14.jpg" alt="design" width="360" />
+                </div>
                 <div class="cards-container">
                   <h2 class="name-photo">Instagram Stories Concept</h2>
                   <p class="name-text-item">Design</p>
                 </div>
               </a>
             </li>
-
             <li class="name-item-list">
               <a class="link" href="/">
+                <div class="container-cards-photo">
+                  <p class="cards-photo-text"> 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                 <img src="./images/img15.jpg" alt="organic" width="360" />
+                </div>
                 <div class="cards-container">
                   <h2 class="name-photo">Organic Food</h2>
                   <p class="name-text-item">Web Site</p>
                 </div>
               </a>
             </li>
-
             <li class="name-item-list">
               <a class="link" href="/">
+                <div class="container-cards-photo">
+                  <p class="cards-photo-text"> 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                 <img src="./images/img16.jpg" alt="fresh" width="360" />
+                </div>
                 <div class="cards-container">
                   <h2 class="name-photo">Fresh Coffee</h2>
                   <p class="name-text-item">Web Site</p>
