--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <li class="features-item">
               <div class="icon-container-svg">
                 <svg width="64" height="64">
-                  <use href="./images/icons.svg.svg#icon-antenna"></use>
+                  <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
               <h3 class="features-subtitle">Strategy</h3>
@@ -96,7 +96,7 @@
             <li class="features-item">
               <div class="icon-container-svg">
                 <svg width="64" height="64">
-                  <use href="./images/icons.svg.svg#icon-clock"></use>
+                  <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
               <h3 class="features-subtitle">Punctuality</h3>
@@ -108,7 +108,7 @@
             <li class="features-item">
               <div class="icon-container-svg">
                 <svg width="64" height="64">
-                  <use href="./images/icons.svg.svg#icon-diagram"></use>
+                  <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
               <h3 class="features-subtitle">Diligence</h3>
@@ -120,7 +120,7 @@
             <li class="features-item">
               <div class="icon-container-svg">
                 <svg width="64" height="64">
-                  <use href="./images/icons.svg.svg#icon-astronaut"></use>
+                  <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
               <h3 class="features-subtitle">Technologies</h3>
@@ -163,28 +163,28 @@
                   <li class="social-media-item">
                     <a href="#" class="social-media-link">
                       <svg class="social-media-icon" width="16" height="16">
-                        <use href="./images/icons.svg.svg#icon-Instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-item">
                     <a href="#" class="social-media-link">
                       <svg class="social-media-icon" width="16" height="16">
-                        <use href="./images/icons.svg.svg#icon-Twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-item">
                     <a href="#" class="social-media-link">
                       <svg class="social-media-icon" width="16" height="16">
-                        <use href="./images/icons.svg.svg#icon-Facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-item">
                     <a href="#" class="social-media-link">
                       <svg class="social-media-icon" width="16" height="16">
-                        <use href="./images/icons.svg.svg#icon-In"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -200,28 +200,28 @@
                     <li class="social-media-item">
                       <a href="." class="social-media-link">
                         <svg class="social-media-icon" width="16" height="16">
-                          <use href="./images/icons.svg.svg#icon-Instagram"></use>
+                          <use href="./images/icons.svg#icon-instagram"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="social-media-item">
                       <a href="#" class="social-media-link">
                         <svg class="social-media-icon" width="16" height="16">
-                          <use href="./images/icons.svg.svg#icon-Twitter"></use>
+                          <use href="./images/icons.svg#icon-twitter"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="social-media-item">
                       <a href="#" class="social-media-link">
                         <svg class="social-media-icon" width="16" height="16">
-                          <use href="./images/icons.svg.svg#icon-Facebook"></use>
+                          <use href="./images/icons.svg#icon-facebook"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="social-media-item">
                       <a href="#" class="social-media-link">
                         <svg class="social-media-icon" width="16" height="16">
-                          <use href="./images/icons.svg.svg#icon-In"></use>
+                          <use href="./images/icons.svg#icon-linkedin"></use>
                         </svg>
                       </a>
                     </li>
@@ -237,28 +237,28 @@
                     <li class="social-media-item">
                       <a href="." class="social-media-link">
                         <svg class="social-media-icon" width="16" height="16">
-                          <use href="./images/icons.svg.svg#icon-Instagram"></use>
+                          <use href="./images/icons.svg#icon-instagram"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="social-media-item">
                       <a href="#" class="social-media-link">
                         <svg class="social-media-icon" width="16" height="16">
-                          <use href="./images/icons.svg.svg#icon-Twitter"></use>
+                          <use href="./images/icons.svg#icon-twitter"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="social-media-item">
                       <a href="#" class="social-media-link">
                         <svg class="social-media-icon" width="16" height="16">
-                          <use href="./images/icons.svg.svg#icon-Facebook"></use>
+                          <use href="./images/icons.svg#icon-facebook"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="social-media-item">
                       <a href="#" class="social-media-link">
                         <svg class="social-media-icon" width="16" height="16">
-                          <use href="./images/icons.svg.svg#icon-In"></use>
+                          <use href="./images/icons.svg#icon-linkedin"></use>
                         </svg>
                       </a>
                     </li>
@@ -274,28 +274,28 @@
                     <li class="social-media-item">
                       <a href="." class="social-media-link">
                         <svg class="social-media-icon" width="16" height="16">
-                          <use href="./images/icons.svg.svg#icon-Instagram"></use>
+                          <use href="./images/icons.svg#icon-instagram"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="social-media-item">
                       <a href="#" class="social-media-link">
                         <svg class="social-media-icon" width="16" height="16">
-                          <use href="./images/icons.svg.svg#icon-Twitter"></use>
+                          <use href="./images/icons.svg#icon-twitter"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="social-media-item">
                       <a href="#" class="social-media-link">
                         <svg class="social-media-icon" width="16" height="16">
-                          <use href="./images/icons.svg.svg#icon-Facebook"></use>
+                          <use href="./images/icons.svg#icon-facebook"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="social-media-item">
                       <a href="#" class="social-media-link">
                         <svg class="social-media-icon" width="16" height="16">
-                          <use href="./images/icons.svg.svg#icon-In"></use>
+                          <use href="./images/icons.svg#icon-linkedin"></use>
                         </svg>
                       </a>
                     </li>
@@ -314,42 +314,42 @@
             <li class="customer-item">
               <a href="#" class="customer-link">
                 <svg class="customer-icon" width="104" height="56">
-                  <use href="./images/icons.svg.svg#icon-Client1"></use>
+                  <use href="./images/icons.svg#icon-Logo1"></use>
                 </svg>
               </a>
             </li>
             <li class="customer-item">
               <a href="#" class="customer-link">
                 <svg class="customer-icon" width="104" height="56">
-                  <use href="./images/icons.svg.svg#icon-Client2"></use>
+                  <use href="./images/icons.svg#icon-Logo2"></use>
                 </svg>
               </a>
             </li>
             <li class="customer-item">
               <a href="#" class="customer-link">
                 <svg class="customer-icon" width="104" height="56">
-                  <use href="./images/icons.svg.svg#icon-Client3"></use>
+                  <use href="./images/icons.svg#icon-Logo3"></use>
                 </svg>
               </a>
             </li>
             <li class="customer-item">
               <a href="#" class="customer-link">
                 <svg class="customer-icon" width="104" height="56">
-                  <use href="./images/icons.svg.svg#icon-Client4"></use>
+                  <use href="./images/icons.svg#icon-Logo4"></use>
                 </svg>
               </a>
             </li>
             <li class="customer-item">
               <a href="#" class="customer-link">
                 <svg class="customer-icon" width="104" height="56">
-                  <use href="./images/icons.svg.svg#icon-Client5"></use>
+                  <use href="./images/icons.svg#icon-Logo5"></use>
                 </svg>
               </a>
             </li>
             <li class="customer-item">
               <a href="#" class="customer-link">
                 <svg class="customer-icon" width="104" height="56">
-                  <use href="./images/icons.svg.svg#icon-Client6"></use>
+                  <use href="./images/icons.svg#icon-Logo6"></use>
                 </svg>
               </a>
             </li>
@@ -375,28 +375,28 @@
             <li class="social-media-item">
               <a href="#" class="social-media-link">
                 <svg class="social-media-icon" width="24" height="24">
-                  <use href="./images/icons.svg.svg#icon-Instagram"></use>
+                  <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="social-media-item">
               <a href="#" class="social-media-link">
                 <svg class="social-media-icon" width="24" height="24">
-                  <use href="./images/icons.svg.svg#icon-Twitter"></use>
+                  <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="social-media-item">
               <a href="#" class="social-media-link">
                 <svg class="social-media-icon" width="24" height="24">
-                  <use href="./images/icons.svg.svg#icon-Facebook"></use>
+                  <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="social-media-item">
               <a href="#" class="social-media-link">
                 <svg class="social-media-icon" width="24" height="24">
-                  <use href="./images/icons.svg.svg#icon-In"></use>
+                  <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
@@ -405,15 +405,15 @@
       </div>
     </footer>
     <!--Modeln-->
-    <div class="modal-container is-hidden" data-modal>
-      <div class="modal">
-        <button class="modal-close-btn" type="button" data-modal-close>
-          <svg class="modal-close-icon" width="8" height="8">
-            <use href="./images/Moder.svg#icon-Modal"></use>
+    <div class="modar-container is-hidden" data-modal>
+      <div class="modar">
+        <button class="modar-close-btn" type="button" data-modal-close>
+          <svg class="modar-close-icon" width="8" height="8">
+            <use href="./images/Modar.svg#icon-Modal"></use>
           </svg>
         </button>
       </div>
     </div>
-    <script src="./js/modal.js"></script>
+    <script src="./js/modar.js"></script>
   </body>
 </html>
