--- a/portfolio.html
+++ b/portfolio.html
@@ -239,28 +239,28 @@
         <li class="social-media-item">
           <a href="#" class="social-media-link">
             <svg class="social-media-icon" width="24" height="24">
-              <use href="./images/icons.svg.svg#icon-Instagram"></use>
+              <use href="./images/icons.svg#icon-instagram"></use>
             </svg>
           </a>
         </li>
         <li class="social-media-item">
           <a href="#" class="social-media-link">
             <svg class="social-media-icon" width="24" height="24">
-              <use href="./images/icons.svg.svg#icon-Twitter"></use>
+              <use href="./images/icons.svg#icon-twitter"></use>
             </svg>
           </a>
         </li>
         <li class="social-media-item">
           <a href="#" class="social-media-link">
             <svg class="social-media-icon" width="24" height="24">
-              <use href="./images/icons.svg.svg#icon-Facebook"></use>
+              <use href="./images/icons.svg#icon-facebook"></use>
             </svg>
           </a>
         </li>
         <li class="social-media-item">
           <a href="#" class="social-media-link">
             <svg class="social-media-icon" width="24" height="24">
-              <use href="./images/icons.svg.svg#icon-In"></use>
+              <use href="./images/icons.svg#icon-linkedin"></use>
             </svg>
           </a>
         </li>
