--- a/index.html
+++ b/index.html
@@ -405,15 +405,15 @@
       </div>
     </footer>
     <!--Modeln-->
-    <div class="modar-container is-hidden" data-modal>
-      <div class="modar">
-        <button class="modar-close-btn" type="button" data-modal-close>
-          <svg class="modar-close-icon" width="8" height="8">
-            <use href="./images/Modar.svg#icon-Modal"></use>
+    <div class="modal-container is-hidden" data-modal>
+      <div class="modal">
+        <button class="modal-close-btn" type="button" data-modal-close>
+          <svg class="modal-close-icon" width="8" height="8">
+            <use href="./images/modal.svg#icon-close-black"></use>
           </svg>
         </button>
       </div>
     </div>
-    <script src="./js/modar.js"></script>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
