--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           </button>
         </div>
       </section>
-      <!--SECTION 1-->
+      <!--SECTION 2-->
       <section class="features">
         <div class="container features-container">
           <h2 class="featurest visually-hidden">Features</h2>
@@ -132,7 +132,7 @@
           </ul>
         </div>
       </section>
-      <!-- SECTION 2 Our team-->
+      <!-- SECTION 3 Our team-->
       <section class="made">
         <div class="container">
           <h2 class="made-title">Our Team</h2>
@@ -288,11 +288,11 @@
           </ul>
         </div>
       </section>
-      <!--SECTION 3 PORTFOLIO-->
+      <!--SECTION 4 PORTFOLIO-->
       <main class="main-section">
         <section class="section-menu">
           <div class="container">
-            <h2 class="made-title">Our Team</h2>
+            <h2 class="made-title">Our Portfolio</h2>
             <!--cards-->
             <ul class="list-cards">
               <li class="name-item-list">
