--- a/index.html
+++ b/index.html
@@ -288,15 +288,13 @@
           </ul>
         </div>
       </section>
-      <!--SECTION 4 PORTFOLIO-->
-      <main class="main-section">
+      <!--SECTION 4 PORTFOLIO-->  
         <section class="section-menu">
           <div class="container">
             <h2 class="made-title">Our Portfolio</h2>
-            <!--cards-->
             <ul class="list-cards">
               <li class="name-item-list">
-                <a class="portfolio-link cards" href="/">
+                <a class="portfolio-link cards">
                   <div class="container-cards-photo">
                     <img src="./images/img8.jpg" alt="banking" width="360" />
                     <p class="cards-photo-text"> 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
@@ -309,7 +307,7 @@
                 </a>
               </li>
               <li class="name-item-list">
-                <a class="portfolio-link cards" href="/">
+                <a class="portfolio-link cards">
                   <div class="container-cards-photo">
                     <img src="./images/img9.jpg" alt="cashless" width="360" />
                     <p class="cards-photo-text"> 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>               
@@ -322,7 +320,7 @@
                 </a>
               </li>
               <li class="name-item-list">
-                <a class="portfolio-link cards" href="/">
+                <a class="portfolio-link cards">
                   <div class="container-cards-photo">
                     <img src="./images/img10.jpg" alt="meditation" width="360" />
                     <p class="cards-photo-text"> 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
@@ -336,7 +334,7 @@
                 </a>
               </li>
               <li class="name-item-list">
-                <a class="portfolio-link cards" href="/">
+                <a class="portfolio-link cards">
                   <div class="container-cards-photo">
                     <img src="./images/img11.jpg" alt="marketing" width="360" />
                     <p class="cards-photo-text"> 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
@@ -349,7 +347,7 @@
                 </a>
               </li>
               <li class="name-item-list">
-                <a class="portfolio-link cards" href="/">
+                <a class="portfolio-link cards">
                   <div class="container-cards-photo">
                     <img src="./images/img12.jpg" alt="design" width="360" />
                     <p class="cards-photo-text"> 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
@@ -362,7 +360,7 @@
                 </a>
               </li>
               <li class="name-item-list">
-                <a class="portfolio-link cards" href="/">
+                <a class="portfolio-link cards">
                   <div class="container-cards-photo">
                     <img src="./images/img13.jpg" alt="marketing" width="360" />
                     <p class="cards-photo-text"> 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
@@ -377,7 +375,6 @@
             </ul>
           </div>
         </section>
-      </main>
     </main>
     <!--footer-->
     <footer class="footer">
