--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
       </main>
     <!--footer-->
     <footer class="footer">
-      <div class="footer-container">
+      <div class="container footer-container">
         <div class="footer-logo-text">
           <a href="./index.html" class="footer-logo-link link"
             >Web<span class="footer-logo-part">Studio</span></a
